force-app/main/default/objects/Case/fields/open__c.field-meta.xml
<CustomField>
    <fullName>open__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>open</label>
    <type>Date</type>
</CustomField>