force-app/main/default/objects/Case/fields/openf__c.field-meta.xml
<CustomField>
    <fullName>openf__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>openf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>