force-app/main/default/objects/Case/fields/openfor__c.field-meta.xml
<CustomField>
    <fullName>openfor__c</fullName>
    <formula>TODAY()-open__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>openfor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>